# ISLP

./: LICENSE  README.md  pyproject.toml
chapter_1/: chapter_1_exercises.py
